# lspranto

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
config/: default.toml
examples/: user-config.toml
src/: config.rs  main.rs  text.rs
src/lsp/: client.rs  conv.rs  edit.rs  manager.rs  mod.rs  transport.rs
src/mcp/: server.rs
