[package]
name = "lspranto"
version = "0.1.0"
edition = "2024"
description = "A config-driven MCP server that bridges any LSP language server to MCP clients"
license = "MIT"

[dependencies]
rmcp = { version = "2.1", features = ["server", "macros", "transport-io", "schemars"] }
tokio = { version = "1", features = ["full"] }
lsp-types = "0.97"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
url = "2"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
itertools = "0.14"
